--- a/index.html
+++ b/index.html
@@ -1,15 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-    <link rel="stylesheet" href="../css/style.css">
-</head>
-<body>
-    <main>
-        <img src="./pics/under_construction.jpg" alt="Under construction">
-    </main>   
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Balda Ede</title>
+        <link rel="stylesheet" href="../css/style.css" />
+    </head>
+    <body>
+        <!-- <main>
+        <img src="./pics/under_construction.jpg" alt="Under construction picture">
+    </main>    -->
+
+        <h1>Balda Ede</h1>
+        <h2>Önéletrajz</h2>
+        <img
+            src="./pics/No_image_available.svg"
+            width="150"
+            alt="Kép helye üres"
+        />
+        <h3>Személyes adatok</h3>
+        <ul>
+            <li>Név: Balda Ede</li>
+            <li>Születési év: 1969</li>
+            <li>Lakhely: Szeged</li>
+            <li>E-mail: baldae@gmail.com</li>
+            <li>Telefon: +3630-000-0000</li>
+        </ul>
+        <h3>Tanulmányok</h3>
+        <ul>
+            <li>2021-2022: Programozás karrier képzés</li>
+            <li>
+                1983-1987: Pollák Antal Erősáramú Ipari Szakközépiskola Szentes
+            </li>
+            <li>1975-1983: Gulyás Mihály Általános Iskola Csorvás</li>
+        </ul>
+        <h3>Munkatapasztalat</h3>
+        <ul>
+            <li>2004-2021: Szegedi Paprikafeldolgozó, Üzemvezető</li>
+            <li>1993-2000: Casino Austria, Videotechnikus</li>
+            <li>1987-1993: MÁV, Mozdonyvezető</li>
+        </ul>
+        <h3>IT tapasztalat</h3>
+        <ul>
+            <li>Windows</li>
+            <li>Office</li>
+            <li>Blender</li>
+            <li>3ds max</li>
+        </ul>
+        <h3>Egyéb</h3>
+        <ul>
+            <li>Vezetői engedély: A, B kategória (1987-től) </li>
+            <li>Targonca vezetői engedély: 3324 (2013-tól)</li>
+        </ul>
+
+        </b></h3>
+    </body>
 </html>
